...
            }
            .selected(isStrikethrough(annotationVM.activeTool))

            Divider()

            // 便签
            toolButton(systemImage: "note.text.badge.plus", label: "便签") {
                annotationVM.activeTool = .note
            }
            .selected(annotationVM.activeTool == .note)

            Divider()

...
